<resources>
    <string name="app_name">BLACAN</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv">Tv Show</string>
    <string name="tv_genre">Genre</string>
    <string name="tv_judul">Title</string>
    <string name="tv_ph">PH</string>
    <string name="tv_tahun">Years</string>
    <string name="tv_tanggal">Date</string>
    <string name="tv_overview">Overview</string>
    <string name="img_cover">Cover</string>
    <string name="img_rating">Rate</string>
    <string name="tv_rating">Rate</string>
    <string name="img_time">time</string>
    <string name="tv_waktu">Time</string>
    <string name="tv_aktor">Actors</string>
    <string name="change_language_settings">Change language</string>
    <string-array name="data_judul">
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Glass</item>
        <item>Deadpool 2</item>
        <item>Ant-Man and the Wasp</item>
        <item>Preman Pensiun</item>
        <item>Robin Hood</item>
        <item>Venom</item>
    </string-array>
    <string-array name="data_genre">
        <item>Action</item>
        <item>Action</item>
        <item>Drama</item>
        <item>Action</item>
        <item>Thriller</item>
        <item>Action</item>
        <item>Action</item>
        <item>Comedy</item>
        <item>Action</item>
        <item>Action</item>
    </string-array>
    <string-array name="data_ph">
        <item>Warner Bros.</item>
        <item>Marvel Studios</item>
        <item>20th Century Fox</item>
        <item>Paramount</item>
        <item>Blumhouse Productions</item>
        <item>Marvel Entertaiment</item>
        <item>Marvel Studios</item>
        <item>MNC Pictures</item>
        <item>Appian Way</item>
        <item>Columbia Pictures</item>
    </string-array>
    <string-array name="data_tahun">
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2019</item>
        <item>2018</item>
        <item>2018</item>
        <item>2019</item>
        <item>2018</item>
        <item>2018</item>
    </string-array>
    <string-array name="data_tanggal">
        <item>December 21, 2018</item>
        <item>April 27, 2018</item>
        <item>November 2, 2018</item>
        <item>December 21, 2018</item>
        <item>January 18, 2019</item>
        <item>May 18, 2018</item>
        <item>July 6, 2018</item>
        <item>January 17, 2019</item>
        <item>November 21, 2018</item>
        <item>October 5, 2018</item>
    </string-array>
    <string-array name="data_overview">
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Wisecracking mercenary Deadpool battles the evil and powerful Cable and other bad guys to save a boys life.</item>
        <item>Just when his time under house arrest is about to end, Scott Lang once again puts his freedom at risk to help Hope van Dyne and Dr. Hank Pym dive into the quantum realm and try to accomplish, against time and any chance of success, a very dangerous rescue mission.</item>
        <item>After three years, the business of Muslihat (Epi Kusnandar), who has retired as a thug, has a problem. Sales decline. Muslihat also faces new problems when Safira (Safira Maharani), her only daughter, grows up in adolescence and begins to be visited by boys. A bigger problem: frictions between his former subordinates.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>
    <string-array name="data_cover">
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/5Kg76ldv7VxeX9YlcQXiowHgdX6.jpg</item>
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/7WsyChQLEftFiDOVTGkv3hFpyyt.jpg</item>
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/lHu1wtNaczFPGFDTrjCSzeLPTKN.jpg</item>
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/fw02ONlDhrYjTSZV8XO6hhU3ds3.jpg</item>
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/svIDTNUoajS8dLEo7EosxvyAsgJ.jpg</item>
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/to0spRl1CMDvyUbOnbb4fTk3VAd.jpg</item>
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/eivQmS3wqzqnQWILHLc4FsEfcXP.jpg</item>
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/7xfWyoz4SF5LHZ713eMtC2aZ0lT.jpg</item>
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/AiRfixFcfTkNbn2A73qVJPlpkUo.jpg</item>
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/2uNW4WbgBXL25BAbXGLnLqX71Sw.jpg</item>
    </string-array>
    <string-array name="data_rating">
        <item>68%</item>
        <item>83%</item>
        <item>81%</item>
        <item>65%</item>
        <item>65%</item>
        <item>75%</item>
        <item>70%</item>
        <item>65%</item>
        <item>58%</item>
        <item>66%</item>
    </string-array>
    <string-array name="data_waktu">
        <item>144 m</item>
        <item>149 m</item>
        <item>135 m</item>
        <item>114 m</item>
        <item>129 m</item>
        <item>121 m</item>
        <item>119 m</item>
        <item>94 m</item>
        <item>116 m</item>
        <item>112 m</item>
    </string-array>
    <string-array name="data_aktor">
        <item>Jason Momoa as Arthur Curry\nAmber Heard as Mera\nWillem Dafoe as Nuidis Vulko</item>
        <item>Robert Downey Jr. as Tony Stark\nChris Hemsworth as Thor\nChris Evans as Steve Rogers</item>
        <item>Rami Malek as Freddie Mercury\nGwilym Lee as Brian May\nBen Hardy as Roger Taylor</item>
        <item>Hailee Steinfeld as Charlie Watson\Jorge Lendeborg Jr. as Memo\Pamela Adlon as Sally Watson</item>
        <item>James McAvoy as Kevin Wendell Crumb\nBruce Willis as David Dunn\nSamuel L. Jackson as Elijah Prince</item>
        <item>Ryan Reynolds as Wade Wilson\nJulian Dennison as Russel Collins\nJosh Brolin as Cable</item>
        <item>Paul Rudd as Ant-Man\nEvangeline Lilly as Wasp\nMichael Pena as Luis</item>
        <item>Epy Kusnandar as Kang Mus\nTya Arifin as Kinanti\nSoraya Rasyid as Imas</item>
        <item>Taron Egerton as Robin\nJamie Foxx as Yahya\nJamie Dornan as Will Scarlet</item>
        <item>Tom Hardy as Eddie Brock / Venom\nMichelle Williams as Anne Weying\nRiz Ahmed as Carlton Drake / Riot</item>
    </string-array>
    <string-array name="data_judul_tv">
        <item>Descendants of the Sun</item>
        <item>Goblin</item>
        <item>The Girl Who Sees Smells</item>
        <item>Weightlifting Fairy Kim Bok-Joo</item>
        <item>Stong Woman Do Bong Soon</item>
        <item>Fight For My Way</item>
        <item>School 2013</item>
        <item>Who Are You: School 2015</item>
        <item>School 2017</item>
        <item>The Heirs</item>
    </string-array>
    <string-array name="data_genre_tv">
        <item>Drama</item>
        <item>Drama</item>
        <item>Drama</item>
        <item>Drama</item>
        <item>Drama</item>
        <item>Drama</item>
        <item>Drama</item>
        <item>Drama</item>
        <item>Drama</item>
        <item>Drama</item>
    </string-array>
    <string-array name="data_ph_tv">
        <item>KBS</item>
        <item>TVN</item>
        <item>SBS</item>
        <item>MBC</item>
        <item>JTBC</item>
        <item>KBS</item>
        <item>KBS</item>
        <item>KBS</item>
        <item>KBS</item>
        <item>SBS</item>
    </string-array>
    <string-array name="data_tahun_tv">
        <item>2016</item>
        <item>2016</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2017</item>
        <item>2013</item>
        <item>2015</item>
        <item>2017</item>
        <item>2013</item>
    </string-array>
    <string-array name="data_tanggal_tv">
        <item>2016</item>
        <item>2016</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2017</item>
        <item>2013</item>
        <item>2015</item>
        <item>2017</item>
        <item>2013</item>
    </string-array>
</resources>