<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="16dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/img_cover"
            android:scaleType="fitXY"
            android:src="@color/colorAccent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_genre"
            style="@style/TextContent.Subtitlee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/tv_genre"
            card_view:layout_constraintStart_toEndOf="@+id/img_photo"
            card_view:layout_constraintTop_toTopOf="@+id/img_photo" />

        <TextView
            android:id="@+id/tv_judul"
            style="@style/TextContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:maxLines="2"
            android:text="@string/tv_judul"
            card_view:layout_constraintStart_toEndOf="@+id/img_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_genre" />

        <TextView
            android:id="@+id/tv_ph"
            style="@style/TextContent.Subtitlee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_judul"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/tv_ph"
            card_view:layout_constraintStart_toEndOf="@+id/img_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_judul" />

        <TextView
            android:id="@+id/tv_tahun"
            style="@style/TextContent.Subtitlee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_judul"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/tv_ph"
            android:text="@string/tv_tahun"
            card_view:layout_constraintStart_toEndOf="@+id/tv_ph"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_judul" />

        <TextView
            android:id="@+id/tv_deskripsi"
            style="@style/TextContent.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_ph"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/img_photo"
            android:maxLines="3"
            android:maxEms="15"
            android:text="@string/tv_overview"
            android:textSize="12sp"
            card_view:layout_constraintStart_toEndOf="@+id/img_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_ph" />

        <ImageView
            android:id="@+id/img_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_deskripsi"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/img_photo"
            android:contentDescription="@string/img_rating"
            android:src="@drawable/ic_star_black_12dp"
            card_view:layout_constraintStart_toEndOf="@+id/img_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_deskripsi" />

        <TextView
            android:id="@+id/tv_rating"
            style="@style/TextContent.Subtitlee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_star"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/tv_rating"
            card_view:layout_constraintStart_toEndOf="@+id/img_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/img_star" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>